# gca

./: CMakeLists.txt
src/cellular_automata/: cellular_automata.cpp  cellular_automata.h
src/graphics/: sfml_front_end.cpp  sfml_front_end.h
src/main/: main.cpp
src/rules/: cartesian_r_one.cpp  cartesian_r_one.h
